--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.13.5",
     "@mui/styles": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "i18next": "^23.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
