--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@mui/material": "^5.13.5",
     "@mui/styles": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
+    "axios": "^1.4.0",
     "i18next": "^23.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
